--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
 <div class="content container">
   <h1 class="post-title">{{ .Title }}</h1>
   <ul class="posts">
-    {{ range where .Data.Pages "Section" "posts" }}
+    {{ range where .Paginator.Pages "Type" "posts" }}
       <li class="post-summary">
         <a href="{{ .Permalink }}" title="{{ .Title }}" class="post-title">{{ .Title }}</a>
         <span class="post-date-list"><time>{{ .Date.Format "Jan 2, 2006" }}</time></span>
