--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,17 +1,22 @@
-{{ partial "head.html" . }}
-
-<div class="content container">
-  <h1 class="post-title">{{ .Title }}</h1>
-  <ul class="posts">
-    {{ range where .Paginator.Pages "Type" "posts" }}
-      <li class="post-summary">
-        <a href="{{ .Permalink }}" title="{{ .Title }}" class="post-title">{{ .Title }}</a>
-        <span class="post-date-list"><time>{{ .Date.Format "Jan 2, 2006" }}</time></span>
-  			<span class="post-read-time">{{ .ReadingTime }} minute read</span>
-        <div class="summary">{{ .Summary }}</div>
-      </li>
-    {{ end }}
-  </ul>
+{{ define "main" -}}
+<div class="posts">
+{{ range where .Paginator.Pages "Type" "posts" -}}
+<article class="post">
+  <h1 class="post-title">
+    <a href="{{ .Permalink }}">{{ .Title }}</a>
+  </h1>
+  <div class="post-meta">
+    <span class="post-read-time">{{ .ReadingTime }} minute read</span> &mdash; 
+    <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}" class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</time>
+  </div>
+  {{ .Summary }}
+  {{ if .Truncated }}
+  <div class="read-more-link">
+    <a href="{{ .RelPermalink }}">Read More…</a>
+  </div>
+  {{ end }}
+</article>
+{{- end }}
 </div>
+{{- end }}
 
-{{ partial "foot.html" . }}
